apps/media/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/description: Indexer
    gethomepage.dev/group: Media
    gethomepage.dev/icon: prowlarr.png
    gethomepage.dev/href: https://prowlarr.${SECRET_DOMAIN}
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prowlarr.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: prowlarr
          port: 80
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
